Contained the restaurant list and filter in a flex box, preventing overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: 50px;
   background-color: #252831;
   text-align:center;
 }
@@ -106,9 +106,10 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 100%;
   background-color: #3397DB;
   align-items: center;
+  flex-direction: row;
 }
 .filter-options h2 {
   color: white;
@@ -136,6 +137,7 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  flex-direction: column;
 }
 #restaurants-list li {
   background-color: #fff;
